# 2026-ncaa-tf-predictions

./: .gitignore  README.md  pyproject.toml
.tmp_dagster_home_j0ol2yvi/history/: runs.db
.tmp_dagster_home_j0ol2yvi/history/runs/: .db  0a211af2-5da4-4926-a122-869930f10cf7.db  1c26f048-9316-4106-abfe-3b561485386d.db  2122215f-8e70-476a-a0c5-e95ab6981617.db  469c8ebb-aaf5-4b5f-a2d8-a40ea353da53.db  5feb3226-63cb-4341-ac39-1af8985137a8.db  6cb45b34-b016-428f-b3d3-d4c84e0423e6.db  7e9cb63a-34dc-449a-a4c3-dc33214a022f.db  81288903-4c81-4e79-b239-0dfc08e087ed.db  84c39446-d177-4e69-baeb-4ad7fcf9495d.db  84dfcba8-d18e-41f8-b6d2-02644c953852.db  8b2f1c14-a796-47f4-8302-1db196629f48.db  a5d72074-e9e1-480f-84b2-cd7be0569ebd.db  ac30b34d-0b5b-4ecb-adef-3f86f7f7bf4e.db  ad2ed35a-6573-43b5-95b0-e35972aa5c54.db  cf13878f-0b60-40eb-92f6-5aec5a3ab2d2.db  d5ec7636-ab4f-429c-8ca8-871b179fa7dd.db  db910f18-692f-473b-afe6-8a2bb4fd6b19.db  eabb5a77-8083-4144-9407-854f0f944b9d.db  ec0e699b-1cdc-4622-a560-4bfdeee24b07.db  ed86792c-9be1-4692-bf8b-9d204fd56237.db  index.db
.tmp_dagster_home_j0ol2yvi/schedules/: schedules.db
.tmp_dagster_home_j0ol2yvi/storage/qualifying_athletes/: east_f  east_m  west_f  west_m
data/flattened_dataframes/: athletes_prs.csv
data/qualifying_athletes/: qualifying_athletes_east_f.csv  qualifying_athletes_east_m.csv  qualifying_athletes_west_f.csv  qualifying_athletes_west_m.csv
pipeline/: __init__.py  partitions.py
pipeline/assets/: __init__.py  athlete_profiles.py  dataframes.py  qualifying_lists.py
(+20 files in other folders)
